# Computational-Geometry

./: CMakeLists.txt  Readme.odt  main.cpp
include/: DCEL.h  Face.h  Grahams.h  HalfEdge.h  Jarvis.h  Kirkpatrick.h  Point.h  Quadrangulate.h  Quadrilateral.h  RBTree.h  SLEdge.h  SLState.h  SLVertex.h  Sweepline.h  Triangle.h  Vertex.h  Visualize.h  Window.h  hull.hpp  quadrangulation.hpp  triangulation.hpp
src/: DCEL.cpp  Face.cpp  Grahams.cpp  HalfEdge.cpp  Jarvis.cpp  Kirkpatrick.cpp  Point.cpp  Quadrangulate.cpp  SLEdge.cpp  SLState.cpp  SLVertex.cpp  Sweepline.cpp  Vertex.cpp  Visualize.cpp
synchronize-288916481/: archive.php  comments.php  footer.php  header.php  index.php  search.php  searchform.php  style.css
